--- a/app/src/main/res/layout/activity_main_principal.xml
+++ b/app/src/main/res/layout/activity_main_principal.xml
@@ -5,7 +5,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPrincipal">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Primer texto agregado al proyecto"
+            android:id="@+id/textView" />
+    </LinearLayout>
 
 </RelativeLayout>
